objects/ASI_CRM_Issue_Zone__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Alcohol_Volume__c</fullName>
        <label>Alcohol Volume (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_COde__c</fullName>
        <label>Bottle Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Size_CL2__c</fullName>
        <label>Bottle Size (CL)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>70 cl</fullName>
                </value>
                <value>
                    <fullName>75 cl</fullName>
                </value>
                <value>
                    <fullName>1 L</fullName>
                </value>
                <value>
                    <fullName>1.5 L</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Size_CL3__c</fullName>
        <label>Bottle Size (CL)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>70 cl</fullName>
                </value>
                <value>
                    <fullName>75 cl</fullName>
                </value>
                <value>
                    <fullName>1 L</fullName>
                </value>
                <value>
                    <fullName>1.5 L</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Size_CL__c</fullName>
        <label>Bottle Size (CL)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>70 cl</fullName>
                </value>
                <value>
                    <fullName>75 cl</fullName>
                </value>
                <value>
                    <fullName>1 L</fullName>
                </value>
                <value>
                    <fullName>1.5 L</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottles_Sighted1__c</fullName>
        <label># Bottles Sighted</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottles_Sighted2__c</fullName>
        <label># Bottles Sighted</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottles_Sighted3__c</fullName>
        <label># Bottles Sighted</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Ballantine&apos;s</fullName>
                </value>
                <value>
                    <fullName>Beefeater</fullName>
                </value>
                <value>
                    <fullName>CHIVAS REGAL</fullName>
                </value>
                <value>
                    <fullName>DUMMY BRAND</fullName>
                </value>
                <value>
                    <fullName>Kahlua</fullName>
                </value>
                <value>
                    <fullName>Malibu</fullName>
                </value>
                <value>
                    <fullName>MARTELL</fullName>
                </value>
                <value>
                    <fullName>MONTESQUIOU</fullName>
                </value>
                <value>
                    <fullName>Mumm</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
                <value>
                    <fullName>Other Wines</fullName>
                </value>
                <value>
                    <fullName>Perrier Jouet</fullName>
                </value>
                <value>
                    <fullName>ROYAL SALUTE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Buy_in_Price_RMB__c</fullName>
        <label>Buy-in Price (RMB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Description__c</fullName>
        <label>Payment, Event, Out-of-Stock, etc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_ImageOutletDetail__c</fullName>
        <label>Display, quality, staff, etc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Lookalike_detail__c</fullName>
        <inlineHelpText>Name of lookalike, distribution company, price, etc.</inlineHelpText>
        <label>Name of lookalike, etc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Origin_of_GMA__c</fullName>
        <inlineHelpText>Origin of GMA, product info, price, qr-code sticker status, etc.</inlineHelpText>
        <label>Origin of GMA, product info, price, etc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Reclassification__c</fullName>
        <description>Reclassify the issue type</description>
        <label>Issue Type Re-classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer Complaint</fullName>
                </value>
                <value>
                    <fullName>Counterfeit</fullName>
                </value>
                <value>
                    <fullName>External GMA</fullName>
                </value>
                <value>
                    <fullName>Image Outlet Execution</fullName>
                </value>
                <value>
                    <fullName>Internal GMA</fullName>
                </value>
                <value>
                    <fullName>Look-alike</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Traceability</fullName>
                </value>
                <value>
                    <fullName>Trade Complaint</fullName>
                </value>
                <value>
                    <fullName>Conflict with Trade</fullName>
                </value>
                <value>
                    <fullName>Service Complaint</fullName>
                </value>
                <value>
                    <fullName>QR Code Sticker</fullName>
                </value>
                <value>
                    <fullName>QR Code Sticker (SV)</fullName>
                </value>
                <value>
                    <fullName>QR Code Sticker (PRQR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Region__c</fullName>
        <formula>if ( ASI_CRM_City__c != &apos;&apos;,  ASI_CRM_City__r.ASI_CRM_CN_Area__r.ASI_CRM_Division__r.ASI_CRM_Region__r.ASI_CRM_Region_Code__c,

if ( ASI_CRM_Outlet_Involved__c!= null, ASI_CRM_Outlet_Involved__r.ASI_KOR_Addr_Region__c , &apos;NoRegion&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Traceability_Detail__c</fullName>
        <inlineHelpText>Sticker quality, cheating, system issue, QR-code, etc.</inlineHelpText>
        <label>Sticker quality, cheating, etc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_external_detail__c</fullName>
        <inlineHelpText>Origin of GMA, product info, price, lot codes, etc.</inlineHelpText>
        <label>Origin of GMA, product info, price, etc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Can_log_in_PRC_website__c</fullName>
        <label>Can you log in PRC QR code website?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Case_Marking__c</fullName>
        <label>Case Marking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <referenceTo>ASI_CRM_City__c</referenceTo>
        <relationshipName>Issue_Zone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Codes1__c</fullName>
        <label>Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Codes2__c</fullName>
        <label>Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Codes3__c</fullName>
        <label>Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Complainant_Name__c</fullName>
        <label>Complainant/Comsumer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Complainant_s_Expected_Solution__c</fullName>
        <label>Expectation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Complaint_City_Region__c</fullName>
        <label>Complaint City &amp; Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Consumer_s_Address__c</fullName>
        <label>Consumer&apos;s Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_of_Purchase__c</fullName>
        <label>Date of Purchase/Sighting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Finance &amp; Operation</fullName>
                </value>
                <value>
                    <fullName>HR, ADM., EA</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>National Sales Development</fullName>
                </value>
                <value>
                    <fullName>National Trade Marketing</fullName>
                </value>
                <value>
                    <fullName>PR &amp; Communication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Description__c</fullName>
        <label>Description of the problematic product</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Discussion_with_seller__c</fullName>
        <label>Discussion with seller</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Distributor1__c</fullName>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Distributor2__c</fullName>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Distributor3__c</fullName>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Distributor_Label__c</fullName>
        <label>Distributor Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Estimated_Qty__c</fullName>
        <label>Estimated Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_How_did_you_arrive_this_figure__c</fullName>
        <label>How did you arrive this figure?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_How_this_complaint_is_learnt__c</fullName>
        <label>How this complaint is learnt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Importer_Information_in_Label__c</fullName>
        <label>Importer Information in Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Investigating_Date__c</fullName>
        <label>Investigating Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Issue_Raised_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Issue Raised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Issue_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Local_Update_Time__c</fullName>
        <label>Local Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Location_Others__c</fullName>
        <label>Location (market, WS, etc.)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Look_Alike_Name1__c</fullName>
        <label>Look-Alike Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Look_Alike_Name2__c</fullName>
        <label>Look-Alike Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Look_Alike_Name3__c</fullName>
        <label>Look-Alike Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Lot_Code_on_Bottle__c</fullName>
        <inlineHelpText>e.g. L32901415</inlineHelpText>
        <label>Lot Code on Bottle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Manufacture_Date_Time_on_Bottle__c</fullName>
        <label>Manufacture Date on Bottle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Manufacture_Date_on_Bottle2__c</fullName>
        <label>Manufacture Date on Bottle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Manufacture_Date_on_Bottle3__c</fullName>
        <label>Manufacture Date on Bottle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Market1__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HKDNP</fullName>
                </value>
                <value>
                    <fullName>SDNP</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Market2__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HKDNP</fullName>
                </value>
                <value>
                    <fullName>SDNP</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Market3__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HKDNP</fullName>
                </value>
                <value>
                    <fullName>SDNP</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Mobile_Brand_and_System_Version__c</fullName>
        <label>Mobile Brand and System Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Next_Step__c</fullName>
        <label>Next Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please use the &quot;+&quot; button on right bottom to add photo to the issue!</fullName>
                    <default>true</default>
                    <label>Please use the &quot;+&quot; button on right bottom to add photo to the issue!</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Not_Seen_Bottle_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Seen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Not_Seen_lot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Seen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Open_Picture_Uploaded_Date__c</fullName>
        <label>Open-Picture Uploaded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order__c</fullName>
        <label>Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Involved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Involved</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Issues (Outlet Involved)</relationshipLabel>
        <relationshipName>Issue_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_s_Address__c</fullName>
        <label>Outlet&apos;s Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PRQR_Account__c</fullName>
        <label>PRQR Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Packing_Specification__c</fullName>
        <label>Packing Specification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pending_Duration__c</fullName>
        <formula>if (ISNULL(ASI_CRM_Resolved_Date__c), TODAY()- ASI_CRM_Issue_Raised_Date__c,  ASI_CRM_Resolved_Date__c - ASI_CRM_Issue_Raised_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Possession_of_the_products__c</fullName>
        <label>Possession of the products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Outlet</fullName>
                </value>
                <value>
                    <fullName>PR China</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price1__c</fullName>
        <label>Price per bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price2__c</fullName>
        <label>Price per bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price3__c</fullName>
        <label>Price per bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product1__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CR12</fullName>
                </value>
                <value>
                    <fullName>MCB</fullName>
                </value>
                <value>
                    <fullName>MNB</fullName>
                </value>
                <value>
                    <fullName>MXO</fullName>
                </value>
                <value>
                    <fullName>RS21</fullName>
                </value>
                <value>
                    <fullName>B12</fullName>
                </value>
                <value>
                    <fullName>Bfinest</fullName>
                </value>
                <value>
                    <fullName>ABS</fullName>
                </value>
                <value>
                    <fullName>Kahlua</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product2__c</fullName>
        <label>Any Other Product?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CR12</fullName>
                </value>
                <value>
                    <fullName>MCB</fullName>
                </value>
                <value>
                    <fullName>MNB</fullName>
                </value>
                <value>
                    <fullName>MXO</fullName>
                </value>
                <value>
                    <fullName>RS21</fullName>
                </value>
                <value>
                    <fullName>B12</fullName>
                </value>
                <value>
                    <fullName>Bfinest</fullName>
                </value>
                <value>
                    <fullName>ABS</fullName>
                </value>
                <value>
                    <fullName>Kahlua</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product3__c</fullName>
        <label>Any Other Product?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CR12</fullName>
                </value>
                <value>
                    <fullName>MCB</fullName>
                </value>
                <value>
                    <fullName>MNB</fullName>
                </value>
                <value>
                    <fullName>MXO</fullName>
                </value>
                <value>
                    <fullName>RS21</fullName>
                </value>
                <value>
                    <fullName>B12</fullName>
                </value>
                <value>
                    <fullName>Bfinest</fullName>
                </value>
                <value>
                    <fullName>ABS</fullName>
                </value>
                <value>
                    <fullName>Kahlua</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_has_been_opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product has been opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_QR_Code1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QR Code Sticker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_QR_Code2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QR Code Sticker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_QR_Code3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QR Code Sticker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_QR_Code_Sticker_Issue_Category__c</fullName>
        <label>QR Code Sticker Issue Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>QR code cannot be scanned</fullName>
                </value>
                <value>
                    <fullName>Fake QR code sticker</fullName>
                </value>
                <value>
                    <fullName>Damage QR code sticker</fullName>
                </value>
                <value>
                    <fullName>QR website issue</fullName>
                </value>
                <value>
                    <fullName>Sticker artwork suggestion</fullName>
                </value>
                <value>
                    <fullName>Sticker position issue</fullName>
                </value>
                <value>
                    <fullName>Sticker quality issue</fullName>
                </value>
                <value>
                    <fullName>Black cap issue</fullName>
                </value>
                <value>
                    <fullName>Sticker data missing</fullName>
                </value>
                <value>
                    <fullName>Bottling date not matching</fullName>
                </value>
                <value>
                    <fullName>System improving requirement</fullName>
                </value>
                <value>
                    <fullName>Lack communication information</fullName>
                </value>
                <value>
                    <fullName>Device issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Qty2__c</fullName>
        <label># bottles sighted</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Qty3__c</fullName>
        <label># bottles sighted</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Qty_Affected__c</fullName>
        <label>Referred Bottles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Qty__c</fullName>
        <label># bottles sighted</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reason_for_Complaint__c</fullName>
        <label>Reason for Complaint</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receipt_Y_N__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receipt (Y/N)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East China</fullName>
                </value>
                <value>
                    <fullName>North China</fullName>
                </value>
                <value>
                    <fullName>Northeast China</fullName>
                </value>
                <value>
                    <fullName>Northwest China</fullName>
                </value>
                <value>
                    <fullName>South Central China</fullName>
                </value>
                <value>
                    <fullName>Southwest China</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks_Additional_Info__c</fullName>
        <label>Remarks/Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Removed_Bottle_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Removed_lot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Resolution_Summary__c</fullName>
        <label>Resolution Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Resolved_Date__c</fullName>
        <label>Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SV_account__c</fullName>
        <label>SV account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Shelf_Price_RMB__c</fullName>
        <label>Shelf Price (RMB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Open-Picture Uploaded</fullName>
                </value>
                <value>
                    <fullName>Investigating</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Automatically Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Submitter_Mobile_Phone__c</fullName>
        <label>Submitter Mobile/Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Submitter_Name__c</fullName>
        <label>Submitter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Summary__c</fullName>
        <formula>ASI_CRM_Issue_Type__c &amp; &quot; | &quot; &amp;  Text(ASI_CRM_Issue_Raised_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tel_No__c</fullName>
        <label>Tel. No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_UOM2__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>